# TalentElite

./: App.js  README.md  asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
auth/: go.mod  go.sum  main.go  users.json
backup/: BackupService.cpp  BackupService.hpp  CMakeLists.txt  Dockerfile  main.cpp
backup/database_backup/: db_backup_20240524_010323.sqlite3  db_backup_20240524_062901.sqlite3
content/: README.md  api_log.json  asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
content/frontend/: package-lock.json  package.json
content/hrm/: apps.py  ge_staff.py  models.py  script_generate_member.py  serializers.py  urls.py  views.py
content/talentelite/: asgi.py  logging_middleware.py  middleware.py  settings.py  urls.py  wsgi.py
digitalzoo/: apps.py  ge_activities.py  models.py  serializers.py  views.py
digitalzoo/migrations/: 0001_initial.py  0002_membership_remove_tour_animals_remove_tour_path_and_more.py  0003_remove_zookeeper_img.py  0004_alter_tour_destination1_alter_tour_destination10_and_more.py  0005_tourroute_tourroutedetail_rename_membership_user_and_more.py  0006_member_delete_user.py  0007_activity_activityparticipant.py  0008_activityparticipant_animal_and_more.py  0009_alter_activityparticipant_activity.py  0010_activity_animal_activity_habitat_activity_member_and_more.py  0011_zookeeper_image.py  (+5 more)
email/: package-lock.json  package.json  server.js
frontend/: package-lock.json  package.json
frontend/public/: index.html
log/: api_log.json  go.mod  main.go
zooconnectsystem/: asgi.py  settings.py  urls.py  wsgi.py
(+48 files in other folders)
